--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,4 +18,5 @@ mongod = { version = "0.3", features = ["derive"] }
 tokio = { version = "1.0", features = ["full"] }
 reqwest = {version = "0.11.14", features = ["json"]}
 serde_json = "1.0.93"
+futures-util = "0.3.27"
 
